--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,2 +1,89 @@
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline; }
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block; }
+
 body {
-  background-color: red; }
+  line-height: 1; }
+
+ol, ul {
+  list-style: none; }
+
+blockquote, q {
+  quotes: none; }
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+/* @import "partials/global-vars"; */
+body {
+  background-image: url("../assets/bg.jpg");
+  font-family: "Oswald";
+  width: 100%; }
+  body #wholePage {
+    width: 100%; }
+    body #wholePage #topHeader {
+      background-color: white;
+      width: 100%; }
+      body #wholePage #topHeader #head-ray-pic {
+        display: none; }
+      body #wholePage #topHeader #main-logo {
+        padding: 1% 0 0 1%; }
+      body #wholePage #topHeader #plus-sign {
+        position: absolute;
+        right: 5%;
+        top: 1.8%;
+        width: 6%; }
+    body #wholePage #nav-Bar {
+      background-color: #414042;
+      color: #808285;
+      font-size: 110%;
+      margin-bottom: 1%;
+      width: 100%; }
+      body #wholePage #nav-Bar #nav-list {
+        display: flex;
+        justify-content: space-around; }
+        body #wholePage #nav-Bar #nav-list .nav-items {
+          padding: 3%;
+          width: 1/3%; }
+    body #wholePage #mainBody {
+      display: flex;
+      flex-flow: row wrap;
+      justify-content: center; }
+      body #wholePage #mainBody .post-div {
+        background-color: white;
+        height: 480px;
+        margin: 1% 0;
+        width: 480px; }
+    body #wholePage #theFooter {
+      display: none; }
