--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,3 +1,65 @@
+@import "partials/reset";
+/* @import "partials/global-vars"; */
+
 body {
-  background-color: red;
+  background-image: url('../assets/bg.jpg');
+  font-family: "Oswald";
+  width: 100%;
+
+  #wholePage {
+    width: 100%;
+
+    #topHeader {
+      background-color: white;
+      width: 100%;
+
+      #head-ray-pic {
+        display: none;
+      }
+
+      #main-logo {
+        padding: 1% 0 0 1%;
+      }
+
+      #plus-sign {
+        position: absolute;
+        right: 5%;
+        top: 1.8%;
+        width: 6%;
+      }
+    }
+
+    #nav-Bar {
+      background-color: #414042;
+      color: #808285;
+      font-size: 110%;
+      margin-bottom: 1%;
+      width: 100%;
+
+      #nav-list {
+        display: flex;
+        justify-content: space-around;
+
+        .nav-items {
+          padding: 3%;
+          width: 1/3%;
+        }
+      }
+    }
+    #mainBody {
+      display: flex;
+      flex-flow: row wrap;
+      justify-content: center;
+
+      .post-div {
+        background-color: white;
+        height: 480px;
+        margin: 1% 0;
+        width: 480px;
+      }
+    }
+    #theFooter {
+      display: none;
+    }
+  }
 }
