--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -74,8 +74,12 @@ body {
         display: flex;
         justify-content: space-around; }
         body #wholePage #nav-Bar #nav-list .nav-items {
-          padding: 3%;
+          padding: 3% 10%;
           width: 1/3%; }
+        body #wholePage #nav-Bar #nav-list #middle-nav {
+          border-left: 1px solid #808285;
+          border-right: 1px solid #808285;
+          padding: 3% 8%; }
     body #wholePage #mainBody {
       display: flex;
       flex-flow: row wrap;
