--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -41,8 +41,14 @@ body {
         justify-content: space-around;
 
         .nav-items {
-          padding: 3%;
+          padding: 3% 10%;
           width: 1/3%;
+        }
+
+        #middle-nav {
+          border-left: 1px solid #808285;
+          border-right: 1px solid #808285;
+          padding: 3% 8%;
         }
       }
     }
